--- a/server/package.json
+++ b/server/package.json
@@ -2,18 +2,24 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "directories": {
     "test": "test"
   },
   "scripts": {
+    "transpile": "babel ./src --out-dir dist-server",
+    "start": "npm run transpile && node dist-server/index.js",
     "test": "jest"
   },
   "author": "Simon Thomson",
   "license": "ISC",
   "dependencies": {
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.0",
     "babel-jest": "^27.3.1",
-    "jest": "^27.3.1"
+    "express": "^4.17.1",
+    "jest": "^27.3.1",
+    "rimraf": "^3.0.2"
   }
 }
